Configured API for the web application

--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,5 +1,8 @@
 flask
+flask-cors
 psycopg2
+bcrypt
+web3
 git+https://git@github.com/multiversx/mx-sdk-py-core.git#egg=multiversx_sdk_core
 git+https://git@github.com/multiversx/mx-sdk-py-wallet.git#egg=multiversx_sdk_wallet
 git+https://git@github.com/multiversx/mx-sdk-py-network-providers.git#egg=multiversx_sdk_network_providers
